@@ -80,7 +80,6 @@ statusproc()
     if [ "${STATUS}" = "0" ]; then
         log_success_msg "Running with PID(s) ${pidlist}"
     else
-        
         log_warning_msg "Not running!"
     fi
 
