@@ -7,7 +7,7 @@
 # Should-Start:
 # Required-Stop:
 # Should-Stop:
-# Default-Start:       sysinit
+# Default-Start:       S
 # Default-Stop:
 # Short-Description:   Mounts /sys and /proc virtual (kernel) filesystems.
 # Description:         Mounts /sys and /proc virtual (kernel) filesystems.
